--- a/P008161.opf/layers/v001/Pagination.yml
+++ b/P008161.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 17722a428ef047359d051a32489cbf7b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6369ab14aa774c54aa5cefe09bd23340:
