--- a/P008161.opf/layers/v002/Pagination.yml
+++ b/P008161.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 392e511c80d8456490226fcec6ac7970
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f1f8cdaed91743078aebe60885036e29:
